# llm-data-extraction

./: .gitignore  .gitmodules  ANALYSIS.md  DATA.md  DEV.md  DEV.org  LICENSE.md  Makefile  README.md  TODO.org  environment-non-gpu.yml  environment-tmp.yml  environment.yml  justfile  justfile-batch  justfile-processing  output  pyproject.toml  setup.py
data/: .gitignore  README.md
data/assets/: deepseek-r1-sample.html
docs/: DEV.org  data_archive.txt  environment-bp1.yml  environment-non-gpu.yml  environment.yml  filetree.txt  manuscript-assets.md  prompt-example.md  prompt-specification.md  tldraw.tldr
docs/prompt-results/: deepseek-prover-metadata.txt  deepseek-prover-result.txt  deepseek-r1-metadata.txt  deepseek-r1-result.txt  falcon-7b-metadata.txt  falcon-7b-result.txt  llama-3.2-11b-vision-instruct-metadata.txt  llama3-8b-result.txt  (+3 more)
envs/: environment-non-gpu.yml  environment.yml
notebooks/: more-models-bp1.ipynb  more-models.ipynb  redhat-llama4-quantized.ipynb
scripts/: extract-data-array-isb.sbatch  extract-data-array-new-data-isb.sbatch  extract-data-array.py  extract-data-bp1.sbatch  extract-data-isb.sbatch  extract-data-pilot-bp1.py  extract-data-pilot-bp1.sbatch  extract-data-pilot-isb.sbatch  extract-data-pilot.py  extract-data.py
src/local_funcs/: funcs.py  pyproject.toml
src/local_funcs/src/local_funcs/: chat_funcs.py  funcs.py  openai_funcs.py  parsers.py  prompt_funcs.py  prompt_templates.py  prompts.py  schema_funcs.py  test_funcs.py
tests/: test_json_schema_validation.py
tom-s-code/: extract_data.py  mrextract_array.sh  prompts.py
(+176 files in other folders)
