[build-system]
# A list of packages that are needed to build your package:
requires = ["setuptools"] # REQUIRED if [build-system] table is used


[project]
name = "local_funcs" # REQUIRED, is the only field that cannot be marked as dynamic.
version = "0.0.0" # REQUIRED, although can be dynamic
description = "local_funcs"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = []
test = []
